Changes in @NEW@:
  o Bug Fixes:
    * Use the faster getFileContentsFromTrove Conary interface, when
      available, for getting product definitions from repositories.

Changes in 1.0:
  o General Availability
    * rpath-product-definition is now released as generally available
      software with a stable API.  See the README file for more
      information.

Changes in 0.6:
  o API Changes:
    * getAllLabelsFromTroves now returns a map that will re-root all
      implicit promotes in order to eliminate shadows. This behavior can
      be overridden by specifying re-roots all implicit promotes in order
      to eliminate shadows. (RPCL-55)
    * getAllLabelsFromTroves now accepts an optional list of labels to
      "flatten" to the target label. (RPCL-55)

  o Documentation Fixes:
    * The documentation for promoteMap specification was incorrect,
      and has been improved. (RPCL-37)      

Changes in 0.5:
  o API Changes:
    * searchPath elements now have additional attributes exposed
      which denote contexts to which they apply.  Right now, the
      two attributes exposed are isResolveTrove and isGroupSearchPathTrove
      which default to True (no change in behavior) but can be
      set to limit the applicability of an element.  In addition,
      product definition objects have additional getResolveTroves
      and getGroupSearchPaths methods which filter the searchPaths
      by the attributes exposed. (RPCL-53)

  o Bug Fixes:
    * Don't add platform defaults if proddef defines any of
      containerTemplates, architectures, buildTemplates, or
      flavorSets. (RPCL-54)

  o Schema Versions:
    * 2.0: Backward-compatible extension to support RPCL-53.

Changes in 0.4:
  o API Changes:
    * Images are now defined differently.  Platforms provide
      generic information about image types, architectures, and sets
      of flavors, which are then referenced from build definitions
      in individual product-definition.xml files.  As part of this